# SOM

./: README.md
cpp/: .ycm_extra_conf.py  CMakeLists.txt
cpp/src/: .ycm_extra_conf.py  BLADE_ROOT  BUILD  BUILD_bck  CMakeLists.txt  color_rbg.txt  som.cc  som.h  train_som.cc
cpp/src/base/: base.h  calcLength.h  circleTopo.cc  circleTopo.h  exp_lr_decay.h  genTopoWeight.h  l2_match.h
cpp/src/test/: test.cc
cpp/src/utils/: initialization.h
cpp/test/: test.cc
python/: .initilization.py.swp  heat_map.npy  initilization.py  mapW.npy  mapW_50.npy  matcher.py  sampler.py  sift_by_som.py  som_2d.py
python/som/: initilization.py  matcher.py  som_2d.py
